syntax = "proto3";

option java_multiple_files = true;
option java_package = "shopping_mall";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "hobby-service.proto";
import "shopping-mall-hobby-service.proto";

package shopping_mall;

service ShoppingMallProtoService {

  rpc GetAllMalls(google.protobuf.BoolValue) returns (ShoppingMallList) {}
  rpc GetMallsWithoutRestricted(RestrictedMallIds) returns (ShoppingMallList) {}
  rpc GetMall(GetMallRequest) returns (ShoppingMallObject) {}
  rpc CreateMall(ShoppingMallObject) returns (ShoppingMallObject) {}
  rpc UpdateMall(ShoppingMallObject) returns (google.protobuf.Empty) {}
  rpc DeleteMall(DeleteMallRequest) returns (google.protobuf.Empty) {}
  rpc RestoreMall(RestoreMallRequest) returns (google.protobuf.Empty) {}
}

message ShoppingMallObject {
  int32 id = 1;
  string name = 2;
  Location location = 3;
  repeated shopping_mall_hobby.ShoppingMallHobby hobbies = 4;
  OperationalStatus status = 5;
  string author = 6;
}

message Location {
  double lat = 1;
  double lng = 2;
}

enum OperationalStatus {
  OPERATIONAL_STATUS_UNSPECIFIED = 0;
  OPERATIONAL_STATUS_OPEN = 1;
  OPERATIONAL_STATUS_CLOSED = 2;
  OPERATIONAL_STATUS_UNDER_CONSTRUCTION = 3;
  OPERATIONAL_STATUS_RENOVATION = 4;
}

message ShoppingMallList {
  repeated ShoppingMallObject malls = 1;
}

message RestrictedMallIds {
  repeated int32 ids = 1;
  bool includeDeleted = 2;
}

message DeleteMallRequest {
  int32 id = 1;
  string author = 2;
}

message RestoreMallRequest {
  int32 id = 1;
  string author = 2;
}

message GetMallRequest {
  int32 id = 1;
  bool includeDeleted = 2;
}
